# Insurance_env

./: Dockerfile  README.md  app.py  inference.py  insurance.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
server/: app.py
